# GoalFM

./: .gitignore  GoalFM.conf  MANIFEST.in  PKGBUILD  PKGBUILD.old  README.md  install.sh  setup.cfg  setup.py  setup.py.old
GoalFM/: __init__.py  __main__.py  auswahl.py  colors.py  game.py  intro.py  match.py  sqlite3db.py  stadion.py  taktik.py  window.py
GoalFM.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
assets/: GoalFM.desktop
locales/: goalfm.pot
locales/de/LC_MESSAGES/: goalfm.mo  goalfm.po
