[metadata]
name = GoalFM
version = 1.0.6
author='Michael John'
author_email='michael.john@gmail.com'
url='http://github.com/amstelchen/goal'

[options]
include_package_data = True
packages = GoalFM   
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
#data_files=('share/GoalFM/assets', ['assets/GoalFM.png'])

[options.package_data]
package_data= { 'GoalFM': ['assets/*.png'],}